--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+@import 'mixin';
+
 * {
    margin: 0;
    box-sizing: border-box;
@@ -25,6 +27,7 @@
       height: 100vh;
       object-fit: cover;
       opacity: 0.7;
+      filter: grayscale(80%);
    }
 
    header {
@@ -52,15 +55,18 @@
    .toggle {
       position: relative;
       cursor: pointer;
+      //border: 2px solid white;
    }
 }
 
 .line {
    background-color: white;
    z-index: 11;
-   height: 3px;
+   height: 4px;
    width: 35px;
-   margin: 8px;
+   margin: 0 0 8px 0;
+
+   @include easeOut;
 }
 
 .menu {
@@ -76,6 +82,7 @@
    height: 100%;
    background-color: rgba(117, 82, 22, 0.71);
    mix-blend-mode: overlay;
+   display: none;
 }
 
 .text {
@@ -96,7 +103,7 @@
    a {
       display: inline-block;
       font-size: 1em;
-      background: white;
+      background: $primary-color;
       padding: 10px 30px;
       text-decoration: none;
       text-transform: uppercase;
@@ -104,9 +111,12 @@
       border-radius: 15px;
       margin-top: 10px;
       letter-spacing: 2px;
+      text-decoration: underline;
+      text-decoration-color: transparent;
 
       &:hover {
-         text-decoration: underline;
+         text-decoration-color: black;
+         @include easeOut;
       }
    }
 }
